microbot.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: microbot
  name: microbot
spec:
  replicas: 15
  selector:
    matchLabels:
      app: microbot
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microbot
    spec:
      containers:
      - image: dontrebootme/microbot:v1
        imagePullPolicy: ""
        name: microbot
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 30
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microbot
  labels:
    app: microbot
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: microbot
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: microbot
spec:
 rules:
   - host: microbot.<IP>.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: microbot
             servicePort: 80
