microbot-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: microbot
spec:
  podSelector:
    matchLabels:
      app: microbot
  policyTypes:
  - Ingress
